--- a/WebApplication/appsettings.Development.json
+++ b/WebApplication/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=5432;database=Notification_And_Report_Processing_Api_Exam;user id=postgres;password=maradona@$$34"
   }
 }
