--- a/WebApplication/appsettings.json
+++ b/WebApplication/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=5432;database=Notification_And_Report_Processing_Api_Exam;user id=postgres;password=maradona@$$34"
+  }
 }
